server_url now always ends in a slash. Document and rely on such.

--- a/rsrc/email/gotMail/message.html
+++ b/rsrc/email/gotMail/message.html
@@ -26,7 +26,7 @@ a {
 
 #if (${body})
 <tr><td style="border: 1px solid #cccccc; padding: 15px;">
-From: <a href="${server_url}/#people-${senderId}">${sender}</a><br/>
+From: <a href="${server_url}#people-${senderId}">${sender}</a><br/>
 Subject: ${subject}<br/><br/>
 "${body}"
 </td></tr>
@@ -34,7 +34,7 @@ Subject: ${subject}<br/><br/>
 
 <tr><td>To read the message in its entirety and see any attachments, please go to:
 
-<p><a href="${server_url}/#mail">${server_url}/#mail</a></p>
+<p><a href="${server_url}#mail">${server_url}#mail</a></p>
 
 ---<br>
 If you no longer wish to receive email when you receive a Whirled mail, simply
