Added support for sending preview emails to onesself before spamming all the users. Did some simple tweaking of the format. We may want something less minimalist.

--- a/rsrc/email/wrapper/message.html
+++ b/rsrc/email/wrapper/message.html
@@ -2,9 +2,7 @@
 <base href="${base_url}"/>
 <style type="text/css">
 html, body {
-  margin: 0;
   border: none;
-  padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -36,9 +34,14 @@ blockquote {
 </style>
 </head>
 <body>
+<center>
+<table width="692">
+<tr><td style="border: 1px solid #cccccc; padding: 15px;">
 ${content}
-
-<br><br>
-If you no longer wish to receive announcements from Whirled, simply configure
-your preferences on the <a href="${base_url}#me-account">Whirled Account</a> page.
+</td></tr><tr><td style="font-size: 12px; text-align: center">
+If you no longer wish to receive announcements from Whirled, adjust your
+preferences on the <a href="${base_url}#me-account">Whirled Account</a> page.
+</td></tr>
+</table>
+</center>
 </body>
